package id.ac.polinema.oop;

public class Cashier {

}
