package id.ac.polinema.oop;

/**
 * A single item on the cafe menu.
 *
 * Complete every method body below (replace the
 * {@code throw new UnsupportedOperationException(...)} lines).
 * Do not change the class name, field names, method names, or signatures —
 * the autograder calls them exactly as defined here.
 *
 * Declare the fields yourself: see the class diagram in the README
 * (all fields must be private).
 */
public class MenuItem {

    /**
     * Creates a menu item and stores both parameters into the fields.
     *
     * @param name  item name
     * @param price price in Rupiah
     */
    public MenuItem(String name, double price) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    public String getName() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    public double getPrice() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Updates the price. A negative price is invalid:
     * ignore it and leave the field unchanged.
     *
     * @param price new price in Rupiah
     */
    public void setPrice(double price) {
        throw new UnsupportedOperationException("Not implemented yet");
    }
}
